[bugfix][MOD]: Move closing curly bracket in the right line

--- a/styles/languages/d.less
+++ b/styles/languages/d.less
@@ -143,8 +143,8 @@ LESSCSS
      + Punctuation                                                            [6] +
      +----------------------------------------------------------------------------+ */
   .punctuation {
-    &.separator, {
-    &.comma
+    &.separator,
+    &.comma {
       color: @color-syntax-symbol;
     }
     &.terminator {
