[refactor,improvement][MOD]: Sync optimizations across Northem themes

--- a/index.less
+++ b/index.less
@@ -9,12 +9,13 @@ author    Arctic Ice Studio                  +
 email     development@arcticicestudio.com    +
 copyright Copyright (C) 2015-2016            +
 created   2015-03-15 20:17 UTC+0100          +
-modified  2016-01-31 23:51 UTC+0100          +
+modified  2016-02-01 20:38 UTC+0100          +
 ++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 A north-bluish dark theme based on the same named color palette designed by Arctic Ice Studio.
 This is a darker and more blue-tinged variation.
+This file imports all package files.
 
 [Index]
   (1) Imports
@@ -69,7 +70,7 @@ Visit the official homepage http://arcticicestudio.com/Northem (actually under c
   - XML            (https://atom.io/packages/language-xml)
   - YAML           (https://atom.io/packages/language-yaml)
 
-[Packages]
+[Package Support]
   - bracket-matcher@^0.79.0           (https://atom.io/packages/bracket-matcher)
   - color-picker@^2.1.1               (https://atom.io/packages/color-picker)
   - highlight-selected@^0.11.1        (https://atom.io/packages/highlight-selected)
@@ -129,9 +130,12 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 [References]
-API-Documentation  (https://atom.io/docs/api/v0.188.0/Atom)
-Atom Flight Manual (https://atom.io/docs)
-LESSCSS            (http://lesscss.org)
+Atom API-Documentation
+  (https://atom.io/docs/api/latest/Atom)
+Atom Flight Manual
+  (https://atom.io/docs)
+LESSCSS
+  (http://lesscss.org)
 */
 /* +----------------------------------------------------------------------------+
    + Imports                                                                [1] +
