--- a/styles/languages/clojure.less
+++ b/styles/languages/clojure.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com             +
 website   http://arcticicestudio.com                  +
 copyright Copyright (C) 2015-2016                     +
 created   2015-08-28 12:07 UTC+0200                   +
-modified  2016-01-31 18:13 UTC+0100                   +
+modified  2016-02-01 20:08 UTC+0100                   +
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -81,7 +81,7 @@ LESSCSS
   /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Enity                                                                  [3] +
+     + Entity                                                                 [3] +
      +----------------------------------------------------------------------------+ */
   .entity {
     &.name.function {
