--- a/styles/languages/r.less
+++ b/styles/languages/r.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com       +
 website   http://arcticicestudio.com            +
 copyright Copyright (C) 2015-2016               +
 created   2015-08-14 15:42 UTC+0200             +
-modified  2016-01-31 23:35 UTC+0100             +
+modified  2016-02-01 20:16 UTC+0100             +
 +++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -25,7 +25,7 @@ This file defines all language specific syntax highlighting classes for R.
   (7) Variable
 
 [Dependencies]
-  - language-foobar@^0.4.0 (https://atom.io/packages/language-foobar) by "lee-dohm " (https://atom.io/users/lee-dohm)
+  - language-r@^0.4.0 (https://atom.io/packages/language-r) by "lee-dohm " (https://atom.io/users/lee-dohm)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
