--- a/styles/languages/sql.less
+++ b/styles/languages/sql.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com         +
 website   http://arcticicestudio.com              +
 copyright Copyright (C) 2015-2016                 +
 created   2016-01-27 15:36 UTC+0100               +
-modified  2016-01-31 23:41 UTC+0100               +
+modified  2016-02-01 21:21 UTC+0100               +
 +++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -110,7 +110,7 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Punctuation                                                            [5] +
      +----------------------------------------------------------------------------+ */
-  &.punctuation.definition.string {
+  .punctuation.definition.string {
     &.begin,
     &.end {
       color: @color-syntax-symbol;
@@ -134,7 +134,7 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + String                                                                 [7] +
      +----------------------------------------------------------------------------+ */
-  &.string.quoted {
+  .string.quoted {
     &.single,
     &.double {
       color: @color-syntax-string;
