--- a/styles/languages/c.less
+++ b/styles/languages/c.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com       +
 website   http://arcticicestudio.com            +
 copyright Copyright (C) 2015-2016               +
 created   2015-08-28 11:42 UTC+0200             +
-modified  2016-01-31 18:11 UTC+0100             +
+modified  2016-02-01 20:09 UTC+0100             +
 +++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -85,7 +85,7 @@ LESSCSS
   /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Enity                                                                  [3] +
+     + Entity                                                                 [3] +
      +----------------------------------------------------------------------------+ */
   .entity.name.function {
     color: @color-syntax-function;
