--- a/styles/languages/cpp.less
+++ b/styles/languages/cpp.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com         +
 website   http://arcticicestudio.com              +
 copyright Copyright (C) 2015-2016                 +
 created   2016-01-24 16:45 UTC+0100               +
-modified  2016-01-31 18:21 UTC+0100               +
+modified  2016-02-01 20:04 UTC+0100               +
 +++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -51,8 +51,6 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 [References]
-Northem Dark
-  (https://github.com/arcticicestudio/northem-dark)
 Atom API-Documentation
   (https://atom.io/docs/api/latest/Atom)
 Atom Flight Manual
@@ -87,7 +85,7 @@ LESSCSS
   /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Enity                                                                  [3] +
+     + Entity                                                                 [3] +
      +----------------------------------------------------------------------------+ */
   .entity.name {
     &.function {
