--- a/styles/languages/glsl.less
+++ b/styles/languages/glsl.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com          +
 website   http://arcticicestudio.com               +
 copyright Copyright (C) 2015-2016                  +
 created   2015-08-14 15:12 UTC+0200                +
-modified  2016-01-31 18:52 UTC+0100                +
+modified  2016-02-01 19:50 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -83,15 +83,13 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Enity                                                                  [3] +
      +----------------------------------------------------------------------------+ */
-  .entity.name {
-    &.function {
-      color: @color-syntax-function;
+  .entity.name.function {
+    color: @color-syntax-function;
 
-      &.preprocessor {
-        color: @color-syntax-constant;
-        font-weight: bold;
-        font-style: italic;
-      }
+    &.preprocessor {
+      color: @color-syntax-constant;
+      font-weight: bold;
+      font-style: italic;
     }
   }
   /* +------------------------------------------------------------------------[3]-+ */
