--- a/styles/languages/haml.less
+++ b/styles/languages/haml.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com          +
 website   http://arcticicestudio.com               +
 copyright Copyright (C) 2015-2016                  +
 created   2015-08-12 14:47 UTC+0200                +
-modified  2016-01-31 18:55 UTC+0100                +
+modified  2016-02-01 19:53 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -110,9 +110,11 @@ LESSCSS
      + Meta                                                                   [5] +
      +----------------------------------------------------------------------------+ */
   .meta {
-    &.line,
-    &.section.attributes {
+    &.line {
       color: @color-syntax-other;
+    }
+    &.section.attributes {
+      color: @color-syntax-symbol;
     }
   }
   /* +------------------------------------------------------------------------[5]-+ */
