--- a/styles/languages/java.less
+++ b/styles/languages/java.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com          +
 website   http://arcticicestudio.com               +
 copyright Copyright (C) 2015-2016                  +
 created   2015-08-08 11:14 UTC+0200                +
-modified  2016-01-31 23:08 UTC+0100                +
+modified  2016-02-01 20:10 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -179,10 +179,10 @@ LESSCSS
   /* +------------------------------------------------------------------------[8]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Variable                                                              [9] +
+     + Variable                                                               [9] +
      +----------------------------------------------------------------------------+ */
   .variable.language {
     color: @color-syntax-keyword;
   }
-  /* +----------------------------------------------------------------------.-[9]-+ */
+  /* +------------------------------------------------------------------------[9]-+ */
 }
