--- a/styles/languages/xml.less
+++ b/styles/languages/xml.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com         +
 website   http://arcticicestudio.com              +
 copyright Copyright (C) 2015-2016                 +
 created   2015-03-19 08:14 UTC+0200               +
-modified  2016-01-31 23:42 UTC+0100               +
+modified  2016-02-01 20:22 UTC+0100               +
 +++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -88,20 +88,18 @@ LESSCSS
   /* +----------------------------------------------------------------------------+
      + Punctuation                                                            [3] +
      +----------------------------------------------------------------------------+ */
-  .punctuation {
-    &.definition {
-      &.tag {
-        color: @color-syntax-xml-tag;
+  .punctuation.definition {
+    &.tag {
+      color: @color-syntax-xml-tag;
+    }
+    &.string {
+      &.begin,
+      &.end {
+        color: @color-syntax-symbol;
       }
-      &.string {
-        &.begin,
-        &.end {
-          color: @color-syntax-symbol;
-        }
-      }
-      &.comment {
-        color: @color-syntax-comment;
-      }
+    }
+    &.comment {
+      color: @color-syntax-comment;
     }
   }
   /* +------------------------------------------------------------------------[3]-+ */
