[documentation][ADD]: Add related Northem projects

--- a/index.less
+++ b/index.less
@@ -30,10 +30,12 @@ This file imports all package files.
 Make sure to check out "Northem Dark Atom UI" (https://github.com/arcticicestudio/northem-dark-atom-ui)!
 
 [Other Projects]
-  - "Northem Dark Eclipse Syntax" (https://github.com/arcticicestudio/northem-dark-eclipse-syntax)
-  - "Northem Dark gedit"          (https://github.com/arcticicestudio/northem-dark-gedit)
-  - "Northem Dark GTK"            (in drafting)
-  - "Northem Dark Notepad++"      (https://github.com/arcticicestudio/northem-dark-notepadplusplus) (Windows only)
+  - "Northem Dark IntelliJ IDEA Syntax" (https://github.com/arcticicestudio/northem-dark-intellij-idea-syntax)
+  - "Northem Dark Eclipse Syntax"       (https://github.com/arcticicestudio/northem-dark-eclipse-syntax)
+  - "Northem Dark Java"                 (https://github.com/arcticicestudio/northem-dark-java)
+  - "Northem Dark gedit"                (https://github.com/arcticicestudio/northem-dark-gedit)
+  - "Northem Dark GTK"                  (in drafting)
+  - "Northem Dark Notepad++"            (https://github.com/arcticicestudio/northem-dark-notepadplusplus) (Windows only)
 
 Visit the official homepage http://arcticicestudio.com/Northem (actually under construction) for more informations.
 
