[documentation][MOD]: Update "Northem" website URL

--- a/index.less
+++ b/index.less
@@ -1,16 +1,16 @@
 /*
-++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem Dark Atom Syntax           +
-project   northem-dark-atom-syntax           +
-file      index.less                         +
-version   0.13.0                             +
-webiste   http://arcticicestudio.com/Northem +
-author    Arctic Ice Studio                  +
-email     development@arcticicestudio.com    +
-copyright Copyright (C) 2015-2016            +
-created   2015-03-15 20:17 UTC+0100          +
-modified  2016-02-01 20:38 UTC+0100          +
-++++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax        +
+project   northem-dark-atom-syntax        +
+file      index.less                      +
+version   0.13.0                          +
+webiste   http://arcticicestudio.com      +
+author    Arctic Ice Studio               +
+email     development@arcticicestudio.com +
+copyright Copyright (C) 2015-2016         +
+created   2015-03-15 20:17 UTC+0100       +
+modified  2016-02-02 22:43 UTC+0100       +
++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 A north-bluish dark theme based on the same named color palette designed by Arctic Ice Studio.
@@ -37,7 +37,7 @@ Make sure to check out "Northem Dark Atom UI" (https://github.com/arcticicestudi
   - "Northem Dark GTK"                  (in drafting)
   - "Northem Dark Notepad++"            (https://github.com/arcticicestudio/northem-dark-notepadplusplus) (Windows only)
 
-Visit the official homepage http://arcticicestudio.com/Northem (actually under construction) for more informations.
+Visit the official homepage http://arcticicestudio.com/northem (actually under construction) for more informations.
 
 [Languages]
   - C              (https://atom.io/packages/language-c)
@@ -83,12 +83,12 @@ Visit the official homepage http://arcticicestudio.com/Northem (actually under c
 0.13.0 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
 
 For older versions check out the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax)
-and http://arcticicestudio.com/Northem (actually under construction).
+and http://arcticicestudio.com/northem (actually under construction).
 
 [Changelog]
 Check out the "CHANGELOG.md" file or open via "Settings" > "Packages" and filter for "northem-dark-atom-syntax".
 All changelogs are available at the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax)
-and http://arcticicestudio.com/Northem (actually under construction).
+and http://arcticicestudio.com/northem (actually under construction).
 
 [Development]
 Please report bugs and suggestions for improvement/language support at https://github.com/arcticicestudio/northem-dark-atom-syntax/issues.
