--- a/styles/languages/git.less
+++ b/styles/languages/git.less
@@ -1,16 +1,16 @@
 /*
-++++++++++++++++++++++++++++++++++++++++++++++++++
-title     Northem DarkAtom Syntax - Language Git +
-project   northem-darkatom-syntax                +
-file      git.less                               +
-version   0.13.0                                 +
-author    Arctic Ice Studio                      +
-email     development@arcticicestudio.com        +
-website   http://arcticicestudio.com             +
-copyright Copyright (C) 2015-2016                +
-created   2015-09-23 12:19 UTC+0200              +
-modified  2016-01-31 11:43 UTC+0100              +
-++++++++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++++++++++
+title     Northem Dark Atom Syntax - Language Git +
+project   northem-dark-atom-syntax                +
+file      git.less                                +
+version   0.13.0                                  +
+author    Arctic Ice Studio                       +
+email     development@arcticicestudio.com         +
+website   http://arcticicestudio.com              +
+copyright Copyright (C) 2015-2016                 +
+created   2015-09-23 12:19 UTC+0200               +
+modified  2016-01-31 11:43 UTC+0100               +
++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines basic syntax highlighting for all Git specifc classes which acually includes
