--- a/styles/languages/template-language.less
+++ b/styles/languages/template-language.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com              +
 website   http://arcticicestudio.com                   +
 copyright Copyright (C) 2015-2016                      +
 created   2016-01-31 11:12 UTC+0100                    +
-modified  2016-01-31 11:13 UTC+0100                    +
+modified  2016-02-03 22:05 UTC+0100                    +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -72,7 +72,7 @@ LESSCSS
   /* +------------------------------------------------------------------------[2]-+ */
 
   /* +----------------------------------------------------------------------------+
-     + Enity                                                                  [3] +
+     + Entity                                                                 [3] +
      +----------------------------------------------------------------------------+ */
   /* +------------------------------------------------------------------------[3]-+ */
 
