--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@ author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 copyright Copyright (C) 2015-2016         +
 created   2015-03-15 20:17 UTC+0100       +
-modified  2016-02-02 22:43 UTC+0100       +
+modified  2016-02-15 21:43 UTC+0100       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -60,6 +60,7 @@ Visit the official homepage http://arcticicestudio.com/northem (actually under c
   - JSON           (https://atom.io/packages/language-json)
   - LESS           (https://atom.io/packages/language-lesss)
   - Markdown       (https://atom.io/packages/language-gfm)
+  - MJML           (https://atom.io/packages/language-mjml)
   - Mustache       (https://atom.io/packages/language-mustache)
   - PHP            (https://atom.io/packages/language-php)
   - PropertyList   (https://atom.io/packages/language-property-list)
