--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -9,11 +9,11 @@ email     development@arcticicestudio.com          +
 website   http://arcticicestudio.com               +
 copyright Copyright (C) 2015-2016                  +
 created   2015-03-15 20:17 UTC+0100                +
-modified  2016-01-31 22:59 UTC+0100                +
+modified  2016-02-15 21:42 UTC+0100                +
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
-This file defines all language specific syntax highlighting classes for HTML.
+This file defines all language specific syntax highlighting classes for HTML and the MJML preprocessor.
 
 [Index]
   (1) Comment
@@ -26,6 +26,7 @@ This file defines all language specific syntax highlighting classes for HTML.
 
 [Dependencies]
   - language-html@^0.43.1 (https://atom.io/packages/language-html) by "atom" (https://atom.io/users/atom)
+  - language-mjml@^1.2.0 (https://atom.io/packages/language-mjml) by "mjmlio" (https://atom.io/users/mjmlio)
 
 [Copyright]
 Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
@@ -54,8 +55,11 @@ Atom Flight Manual
   (https://atom.io/docs)
 LESSCSS
   (http://lesscss.org)
+MJML
+  (https://mjml.io)
 */
-.text.html.basic {
+.text.html.basic,
+.text.mjml.basic {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
@@ -100,7 +104,8 @@ LESSCSS
      +----------------------------------------------------------------------------+ */
   .meta {
     &.tag {
-      &.any {
+      &.any,
+      &.other {
         color: @color-syntax-keyword;
       }
       &.sgml.doctype {
