[improvement][ADD][GHI-3]: Add better color differentiation for HTML

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com   +
 website   http://arcticicestudio.com        +
 copyright Copyright (C) 2015-2016           +
 created   2015-03-16 18:21 UTC+0100         +
-modified  2016-02-01 20:26 UTC+0100         +
+modified  2016-02-17 11:56 UTC+0100         +
 +++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -189,8 +189,11 @@ LESSCSS
 /* +----------------------------------------------------------------------------+
    + Language - HTML                                                      [6.6] +
    +----------------------------------------------------------------------------+ */
-@color-syntax-html-cdata: @color-syntax-comment;
-@color-syntax-html-tag:   @blue;
+@color-syntax-html-cdata:                  @color-syntax-comment;
+@color-syntax-html-tag:                    @blue;
+@color-syntax-html-attribute-value:        @blue;
+@color-syntax-html-attribute-value-symbol: @blue;
+@color-syntax-html-attribute-name:         @lime;
 /* +----------------------------------------------------------------------[6.6]-+ */
 
 /* +----------------------------------------------------------------------------+
