Minor color suggestions. Indent guide color change. Padding for gutter icon. TODO: Colorize indent guide for active line (right now it becomes invisible for the active line.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -130,7 +130,7 @@ LESSCSS
 /* +----------------------------------------------------------------------------+
    + Guides                                                                 [5] +
    +----------------------------------------------------------------------------+ */
-@color-guides-indent-line: @light-coal;
+@color-guides-indent-line: @coal;
 @color-guides-invisibles:  @light-coal;
 @color-guides-wrap:        @light-coal;
 /* +------------------------------------------------------------------------[5]-+ */
@@ -190,9 +190,9 @@ LESSCSS
    + Language - HTML                                                      [6.6] +
    +----------------------------------------------------------------------------+ */
 @color-syntax-html-cdata:                  @color-syntax-comment;
-@color-syntax-html-tag:                    @blue;
+@color-syntax-html-tag:                    @dark-blue;
 @color-syntax-html-attribute-value:        @blue;
-@color-syntax-html-attribute-value-symbol: @blue;
+@color-syntax-html-attribute-value-symbol: @dirty-white;
 @color-syntax-html-attribute-name:         @lime;
 /* +----------------------------------------------------------------------[6.6]-+ */
 
