--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -83,6 +83,8 @@ MJML
      +----------------------------------------------------------------------------+ */
   .entity {
     &.name.tag {
+        color: @color-syntax-html-tag;
+        font-weight: bold;
       &.structure,
       &.script,
       &.style {
