--- a/index.less
+++ b/index.less
@@ -3,7 +3,7 @@
 title     Index                           +
 project   northem-dark-atom-syntax        +
 file      index.less                      +
-version                                   +
+version   0.0.0                           +
 webiste   http://arcticicestudio.com      +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
@@ -83,7 +83,7 @@ Visit the official website http://arcticicestudio.com/northem (actually under co
   - minimap-git-diff@^4.2.0           (https://atom.io/packages/minimap-git-diff)
 
 [Version]
-- (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
+0.0.0 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
 
 For older versions check out the GitHub Repository (https://github.com/arcticicestudio/northem-dark-atom-syntax)
 and http://arcticicestudio.com/northem (actually under construction).
