Prepare stable development release (apm) version 0.18.0

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,16 +1,16 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++++
-title     Colors                            +
-project   northem-dark-atom-syntax          +
-file      colors.less                       +
-version                                     +
-author    Arctic Ice Studio                 +
-email     development@arcticicestudio.com   +
-website   http://arcticicestudio.com        +
-copyright Copyright (C) 2015-2016           +
-created   2015-03-16 18:21 UTC+0100         +
-modified  2016-03-25 21:53 UTC+0100         +
-+++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++
+title     Colors                          +
+project   northem-dark-atom-syntax        +
+file      colors.less                     +
+version   0.18.0                          +
+author    Arctic Ice Studio               +
+email     development@arcticicestudio.com +
+website   http://arcticicestudio.com      +
+copyright Copyright (C) 2015-2016         +
+created   2015-03-16 18:21 UTC+0100       +
+modified  2016-03-25 21:53 UTC+0100       +
++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all syntax, editor, language & package specific color variables.
