--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,16 +1,16 @@
 /*
-+++++++++++++++++++++++++++++++++++++++++++++
-title     Editor                            +
-project   northem-dark-atom-syntax          +
-file      editor.less                       +
-version                                     +
-author    Arctic Ice Studio                 +
-email     development@arcticicestudio.com   +
-website   http://arcticicestudio.com        +
-copyright Copyright (C) 2015-2016           +
-created   2015-03-15 20:17 UTC+0100         +
-modified  2016-02-19 21:20 UTC+0100         +
-+++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++
+title     Editor                          +
+project   northem-dark-atom-syntax        +
+file      editor.less                     +
+version   0.18.0                          +
+author    Arctic Ice Studio               +
+email     development@arcticicestudio.com +
+website   http://arcticicestudio.com      +
+copyright Copyright (C) 2015-2016         +
+created   2015-03-15 20:17 UTC+0100       +
+modified  2016-02-19 21:20 UTC+0100       +
++++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
 This file defines all editor specific classes.
