--- a/styles/languages/coffeescript.less
+++ b/styles/languages/coffeescript.less
@@ -3,7 +3,7 @@
 title     Language "CoffeeScript"         +
 project   northem-dark-atom-syntax        +
 file      coffeescript.less               +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
