--- a/styles/languages/cs.less
+++ b/styles/languages/cs.less
@@ -3,7 +3,7 @@
 title     Language "C#" (CSharp)          +
 project   northem-dark-atom-syntax        +
 file      cs.less                         +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
