--- a/styles/languages/d.less
+++ b/styles/languages/d.less
@@ -3,7 +3,7 @@
 title     Language "D"                    +
 project   northem-dark-atom-syntax        +
 file      d.less                          +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
