--- a/styles/languages/generic-config.less
+++ b/styles/languages/generic-config.less
@@ -3,7 +3,7 @@
 title     Language "Generic Config" (dotfiles) +
 project   northem-dark-atom-syntax             +
 file      generic-config.less                  +
-version                                        +
+version   0.18.0                               +
 author    Arctic Ice Studio                    +
 email     development@arcticicestudio.com      +
 website   http://arcticicestudio.com           +
