--- a/styles/languages/gfm.less
+++ b/styles/languages/gfm.less
@@ -3,7 +3,7 @@
 title     Language "GitHub Flavored Markdown" +
 project   northem-dark-atom-syntax            +
 file      gfm.less                            +
-version                                       +
+version   0.18.0                              +
 author    Arctic Ice Studio                   +
 email     development@arcticicestudio.com     +
 website   http://arcticicestudio.com          +
