--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -3,7 +3,7 @@
 title     Language "HTML"                 +
 project   northem-dark-atom-syntax        +
 file      html.less                       +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
