--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -3,7 +3,7 @@
 title     Language "JavaScript"           +
 project   northem-dark-atom-syntax        +
 file      javascript.less                 +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
