--- a/styles/languages/julia.less
+++ b/styles/languages/julia.less
@@ -3,7 +3,7 @@
 title     Language "Julia"                +
 project   northem-dark-atom-syntax        +
 file      julia.less                      +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
