--- a/styles/languages/lesscss.less
+++ b/styles/languages/lesscss.less
@@ -3,7 +3,7 @@
 title     Language "LESSCSS"              +
 project   northem-dark-atom-syntax        +
 file      lesscss.less                    +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
