--- a/styles/languages/mustache.less
+++ b/styles/languages/mustache.less
@@ -3,7 +3,7 @@
 title     Language "Mustache"             +
 project   northem-dark-atom-syntax        +
 file      mustache.less                   +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
