--- a/styles/languages/property-list.less
+++ b/styles/languages/property-list.less
@@ -3,7 +3,7 @@
 title     Language "Property List"        +
 project   northem-dark-atom-syntax        +
 file      property-list.less              +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
