--- a/styles/languages/shellscript.less
+++ b/styles/languages/shellscript.less
@@ -3,7 +3,7 @@
 title     Language "ShellScript"          +
 project   northem-dark-atom-syntax        +
 file      shellscript.less                +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
