--- a/styles/languages/template-language.less
+++ b/styles/languages/template-language.less
@@ -3,7 +3,7 @@
 title     Language Template               +
 project   northem-dark-atom-syntax        +
 file      template-language.less          +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
