--- a/styles/languages/xml.less
+++ b/styles/languages/xml.less
@@ -3,7 +3,7 @@
 title     Language "XML"                  +
 project   northem-dark-atom-syntax        +
 file      xml.less                        +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
