--- a/styles/packagesupport.less
+++ b/styles/packagesupport.less
@@ -3,7 +3,7 @@
 title     Package Support                 +
 project   northem-dark-atom-syntax        +
 file      packagesupport.less             +
-version                                   +
+version   0.18.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
