Add ".js" and ".js.jsx" source classes to enable HTML element highlighting

--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -48,7 +48,9 @@ MJML
   (https://mjml.io)
 */
 .text.html.basic,
-.text.mjml.basic {
+.text.mjml.basic,
+.source.js,
+.source.js.jsx {
   color: @color-syntax-other;
   /* +----------------------------------------------------------------------------+
      + Comment                                                                [1] +
