--- a/styles/colors.less
+++ b/styles/colors.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
 copyright Copyright (C) 2015-2016         +
 created   2015-03-16 18:21 UTC+0100       +
-modified  2016-03-25 21:53 UTC+0100       +
+modified  2016-04-12 12:55 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -36,8 +36,9 @@ This file defines all syntax, editor, language & package specific color variable
     (6.11) Markdown
     (6.12) Mustache
     (6.13) PropertyList
-    (6.14) Ruby
-    (6.15) XML
+    (6.14) React JSX
+    (6.15) Ruby
+    (6.16) XML
     (7) Package Support
       (7.0) markdown-preview
       (7.1) color-picker
@@ -231,19 +232,25 @@ Arctic Versioning Specification (ArcVer)
 /* +---------------------------------------------------------------------[6.13]-+ */
 
 /* +----------------------------------------------------------------------------+
-   + Language - Ruby                                                     [6.14] +
+   + Languages - React JSX                                               [6.14] +
    +----------------------------------------------------------------------------+ */
-@color-syntax-ruby-instance:       @aqua;
-@color-syntax-ruby-special-method: @dark-blue;
+@color-syntax-react-jsx-embedded-template: @dark-blue;
 /* +---------------------------------------------------------------------[6.14]-+ */
 
 /* +----------------------------------------------------------------------------+
-   + Language - XML                                                      [6.15] +
+   + Language - Ruby                                                     [6.15] +
+   +----------------------------------------------------------------------------+ */
+@color-syntax-ruby-instance:       @aqua;
+@color-syntax-ruby-special-method: @dark-blue;
+/* +---------------------------------------------------------------------[6.15]-+ */
+
+/* +----------------------------------------------------------------------------+
+   + Language - XML                                                      [6.16] +
    +----------------------------------------------------------------------------+ */
 @color-syntax-xml-attribute: @aqua;
 @color-syntax-xml-cdata:     @color-syntax-comment;
 @color-syntax-xml-tag:       @blue;
-/* +---------------------------------------------------------------------[6.15]-+ */
+/* +---------------------------------------------------------------------[6.16]-+ */
 /* +------------------------------------------------------------------------[6]-+ */
 
 /* +----------------------------------------------------------------------------+
