Import "react-jsx.less" in the index stylesheet

--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@ author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 copyright Copyright (C) 2015-2016         +
 created   2015-03-15 20:17 UTC+0100       +
-modified  2016-03-05 11:00 UTC+0100       +
+modified  2016-04-12 12:57 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -210,6 +210,7 @@ Glacier - Git
 @import "./styles/languages/property-list.less";
 @import "./styles/languages/python.less";
 @import "./styles/languages/r.less";
+@import "./styles/languages/react-jsx.less";
 @import "./styles/languages/ruby.less";
 @import "./styles/languages/sass.less";
 @import "./styles/languages/shellscript.less";
