Update documentation with "React JSX" references

--- a/index.less
+++ b/index.less
@@ -67,6 +67,7 @@ Visit the official website http://arcticicestudio.com/northem (actually under co
   - PropertyList    (https://atom.io/packages/language-property-list)
   - Python          (https://atom.io/packages/language-python)
   - R               (https://atom.io/packages/language-r)
+  - React JSX       (https://atom.io/packages/react)
   - Ruby            (https://atom.io/packages/language-ruby)
   - SASS            (https://atom.io/packages/language-sass)
   - Shell           (https://atom.io/packages/language-shellscript)
