--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@ author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 copyright Copyright (C) 2015-2016         +
 created   2015-03-15 20:17 UTC+0100       +
-modified  2016-04-12 12:57 UTC+0200       +
+modified  2016-05-04 10:08 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -59,7 +59,8 @@ Visit the official website http://arcticicestudio.com/northem (actually under co
   - Java Properties (https://atom.io/packages/language-java)
   - JavaScript      (https://atom.io/packages/language-javascript)
   - JSON            (https://atom.io/packages/language-json)
-  - LESS            (https://atom.io/packages/language-lesss)
+  - LaTeX           (https://atom.io/packages/language-latex)
+  - LESSCSS         (https://atom.io/packages/language-lesss)
   - Markdown        (https://atom.io/packages/language-gfm)
   - MJML            (https://atom.io/packages/language-mjml)
   - Mustache        (https://atom.io/packages/language-mustache)
@@ -205,6 +206,7 @@ Glacier - Git
 @import "./styles/languages/javascript.less";
 @import "./styles/languages/json.less";
 @import "./styles/languages/julia.less";
+@import "./styles/languages/latex.less";
 @import "./styles/languages/lesscss.less";
 @import "./styles/languages/mustache.less";
 @import "./styles/languages/php.less";
