Prepare stable development release version 0.20.0

--- a/styles/languages/latex.less
+++ b/styles/languages/latex.less
@@ -3,7 +3,7 @@
 title     Language "LaTeX"                +
 project   northem-dark-atom-syntax        +
 file      latex.less                      +
-version                                   +
+version   0.20.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
