Import LESSCSS stylesheet into the index

--- a/index.less
+++ b/index.less
@@ -7,9 +7,9 @@ version   0.20.0                          +
 webiste   http://arcticicestudio.com      +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
-copyright Copyright (C) 2015-2016         +
+copyright Copyright (C) 2016              +
 created   2015-03-15 20:17 UTC+0100       +
-modified  2016-05-04 10:08 UTC+0200       +
+modified  2016-08-06 11:48 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -197,6 +197,7 @@ Glacier - Git
 @import "./styles/languages/gfm.less";
 @import "./styles/languages/git.less";
 @import "./styles/languages/glsl.less";
+@import "./styles/languages/go.less";
 @import "./styles/languages/haml.less";
 @import "./styles/languages/haskell.less";
 @import "./styles/languages/html.less";
