Import LESSCSS stylesheet into the index

--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@ author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 copyright Copyright (C) 2016              +
 created   2015-03-15 20:17 UTC+0100       +
-modified  2016-08-06 11:48 UTC+0200       +
+modified  2016-08-06 11:52 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -209,6 +209,7 @@ Glacier - Git
 @import "./styles/languages/julia.less";
 @import "./styles/languages/latex.less";
 @import "./styles/languages/lesscss.less";
+@import "./styles/languages/make.less";
 @import "./styles/languages/mustache.less";
 @import "./styles/languages/php.less";
 @import "./styles/languages/property-list.less";
