Add language-specific color variable

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -9,7 +9,7 @@ email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
 copyright Copyright (C) 2016              +
 created   2015-03-16 18:21 UTC+0100       +
-modified  2016-08-06 12:00 UTC+0200       +
+modified  2016-08-06 12:08 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -41,7 +41,8 @@ This file defines all syntax, editor, language & package specific color variable
     (6.15) PropertyList
     (6.16) React JSX
     (6.17) Ruby
-    (6.18) XML
+    (6.18) Scala
+    (6.19) XML
     (7) Package Support
       (7.0) markdown-preview
       (7.1) color-picker
@@ -268,12 +269,18 @@ LESSCSS
 /* +---------------------------------------------------------------------[6.17]-+ */
 
 /* +----------------------------------------------------------------------------+
-   + Language - XML                                                      [6.18] +
+   + Languages - Scala                                                   [6.18] +
+   +----------------------------------------------------------------------------+ */
+@color-syntax-scala-scaladoc-tag: @light-blue;
+/* +---------------------------------------------------------------------[6.18]-+ */
+
+/* +----------------------------------------------------------------------------+
+   + Language - XML                                                      [6.19] +
    +----------------------------------------------------------------------------+ */
 @color-syntax-xml-attribute: @aqua;
 @color-syntax-xml-cdata:     @color-syntax-comment;
 @color-syntax-xml-tag:       @blue;
-/* +---------------------------------------------------------------------[6.18]-+ */
+/* +---------------------------------------------------------------------[6.19]-+ */
 /* +------------------------------------------------------------------------[6]-+ */
 
 /* +----------------------------------------------------------------------------+
