--- a/index.less
+++ b/index.less
@@ -9,7 +9,7 @@ author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 copyright Copyright (C) 2016              +
 created   2015-03-15 20:17 UTC+0100       +
-modified  2016-08-06 11:59 UTC+0200       +
+modified  2016-08-06 12:09 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -219,6 +219,7 @@ Glacier - Git
 @import "./styles/languages/react-jsx.less";
 @import "./styles/languages/ruby.less";
 @import "./styles/languages/sass.less";
+@import "./styles/languages/scala.less";
 @import "./styles/languages/shellscript.less";
 @import "./styles/languages/sql.less";
 @import "./styles/languages/xml.less";
