Add language class ".text.html.nunjucks" to support HTML in Nunjucks

--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -7,9 +7,9 @@ version   0.20.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
-copyright Copyright (C) 2015-2016         +
+copyright Copyright (C) 2016              +
 created   2015-03-15 20:17 UTC+0100       +
-modified  2016-04-12 12:30 UTC+0200       +
+modified  2016-08-06 12:11 UTC+0200       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -30,7 +30,7 @@ JavaScript and React JSX templates.
   - language-mjml@^1.2.0 (https://atom.io/packages/language-mjml) by "mjmlio" (https://atom.io/users/mjmlio)
 
 [Copyright]
-Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
 Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
@@ -43,12 +43,11 @@ Atom Flight Manual
   (https://atom.io/docs)
 LESSCSS
   (http://lesscss.org)
-Arctic Versioning Specification (ArcVer)
-  (http://specs.arcticicestudio.com/arcver)
 MJML
   (https://mjml.io)
 */
 .text.html.basic,
+.text.html.nunjucks,
 .text.mjml.basic,
 .source.js,
 .source.js.jsx {
