Remove non-explicit keyword selection

--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -7,9 +7,9 @@ version   0.20.0                          +
 author    Arctic Ice Studio               +
 email     development@arcticicestudio.com +
 website   http://arcticicestudio.com      +
-copyright Copyright (C) 2015-2016         +
+copyright Copyright (C) 2016              +
 created   2015-03-15 20:17 UTC+0100       +
-modified  2016-01-31 23:13 UTC+0100       +
+modified  2016-08-06 12:14 UTC+0100       +
 +++++++++++++++++++++++++++++++++++++++++++
 
 [Description]
@@ -31,7 +31,7 @@ This file defines all language specific syntax highlighting classes for JavaScri
   - language-javascript@^0.104.0 (https://atom.io/packages/language-javascript) by "atom" (https://atom.io/users/atom)
 
 [Copyright]
-Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
 
 [License]
 Northem code is licensed under "GPL 3.0" (http://www.gnu.org/licenses/gpl.txt).
@@ -44,8 +44,6 @@ Atom Flight Manual
   (https://atom.io/docs)
 LESSCSS
   (http://lesscss.org)
-Arctic Versioning Specification (ArcVer)
-  (http://specs.arcticicestudio.com/arcver)
 */
 .source.js {
   color: @color-syntax-other;
@@ -191,7 +189,7 @@ Arctic Versioning Specification (ArcVer)
      +----------------------------------------------------------------------------+ */
   .storage {
     &.modifier,
-    &.type.function {
+    &.type {
       color: @color-syntax-keyword;
     }
   }
